# SFMLGame

./: .gitignore  CMakeLists.txt
.cmake/api/v1/reply/: cache-v2-d64f758444fb72c7640a.json  cmakeFiles-v1-9c3404071212c87c860e.json  codemodel-v2-f0409ff59f76f279ce4b.json  index-2021-01-13T08-23-10-0911.json  target-Game-cc16f00714c04ace6fd5.json
src/: Window.cpp  Window.hpp  main.cpp
